@startuml

title __SKWINKLES's Class Diagram__\n

  namespace semana1 {
    namespace skwinkles {
      class semana1.skwinkles.clasico {
          ~ classic : String
          ~ clasico()
          ~ display()
      }
    }
  }
  

  namespace semana1 {
    namespace skwinkles {
      class semana1.skwinkles.gheti {
          {static} + main()
      }
    }
  }
  

  namespace semana1 {
    namespace skwinkles {
      class semana1.skwinkles.rell {
          {static} + main()
      }
    }
  }
  

  namespace semana1 {
    namespace skwinkles {
      class semana1.skwinkles.rellenos {
          ~ relleno : String
          ~ displayed()
          ~ rellenos()
      }
    }
  }
  

  namespace semana1 {
    namespace skwinkles {
      class semana1.skwinkles.salsagheti {
          ~ sobre : String
          ~ tiras : String
          ~ displaying()
          ~ salsagheti()
      }
    }
  }
  

  namespace semana1 {
    namespace skwinkles {
      class semana1.skwinkles.skwink {
          {static} + main()
      }
    }
  }
  

  namespace semana1 {
    namespace skwinkles {
      class semana1.skwinkles.skwinkle {
          {static} + main()
      }
    }
  }
  

  namespace semana1 {
    namespace skwinkles {
      class semana1.skwinkles.skwinklote {
          ~ size : String
          ~ disp()
          ~ skwinklote()
      }
    }
  }
  

  semana1.skwinkles.rellenos -up-|> semana1.skwinkles.clasico
  semana1.skwinkles.salsagheti -up-|> semana1.skwinkles.clasico
  semana1.skwinkles.skwinklote -up-|> semana1.skwinkles.rellenos


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
